--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "start": "node bot.js"
   },
   "dependencies": {
-    "discord.js": "11.1.0",
-    "request": "2.81.0"
+    "discord.js": "^10.0.1",
+    "ffmpeg": "0.0.4",
+    "node-opus": "^0.2.4",
+    "request": "^2.79.0",
+    "yamljs": "^0.2.8",
+    "youtube-node": "^1.3.0",
+    "ytdl-core": "^0.7.20"
   }
 }
